Squashed commit of the following:
commit 931040c1ebf7c6ba04a7470a851a9b9b6437c2f1
Author: krznck <krznck@proton.me>
Date:   Fri Aug 9 17:01:59 2024 +0200

    Specify setting categories where appropriate

commit a3713629b4c57226dce99e451af50f185d11bbf4
Author: krznck <krznck@proton.me>
Date:   Fri Aug 9 16:55:35 2024 +0200

    Revert to hardcoded reset buttons

commit 8caaf881f4388783ae5a212f6f9f057b4949474a
Author: krznck <krznck@proton.me>
Date:   Fri Aug 9 16:22:54 2024 +0200

    Overhaul code for settings

commit b5ba5876abcdf6e4f707a1aaa3084c22f1a19c0a
Author: krznck <krznck@proton.me>
Date:   Thu Aug 8 22:43:21 2024 +0200

    Cleanup and review HotkeyHandler/CopyCatcher

commit 4582311293d6290a3e360ecdf19f34669d4cf5a6
Author: krznck <krznck@proton.me>
Date:   Thu Aug 8 20:13:26 2024 +0200

    Cleanup and review ClipboardContent

commit fa6cda25e86d1402570ef520dad850760c79bb42
Author: krznck <krznck@proton.me>
Date:   Thu Aug 8 18:12:20 2024 +0200

    Cleanup and review About page

commit db366b33614122bd9f5f91160b7e75db191017b1
Author: krznck <krznck@proton.me>
Date:   Thu Aug 8 17:57:05 2024 +0200

    Cleanup and review Appearance page

commit 2db41dc00566ef25e79674b5f95ea362674aabca
Author: krznck <krznck@proton.me>
Date:   Thu Aug 8 17:51:15 2024 +0200

    Cleanup and review Behavior page

commit e4fc39813b6c916dcde147c7f053d662111eb953
Author: krznck <krznck@proton.me>
Date:   Thu Aug 8 17:27:40 2024 +0200

    Cleanup and review General page

commit 9908c51113edbe731f36d2b0d8968851843cffc9
Author: krznck <krznck@proton.me>
Date:   Wed Aug 7 22:23:20 2024 +0200

    Cleanup and review Resources

commit c9a4989d2b4898385d991aebf2560f70bb62abf0
Author: krznck <krznck@proton.me>
Date:   Wed Aug 7 21:44:31 2024 +0200

    Fix unnecessary multiple instances of UpdateChecker

    Now we pass the UpdateChecker from MainWindow to the About page.

commit 7041a26533dd6ef3fe2b0641914ccd6c4de98ba6
Author: krznck <krznck@proton.me>
Date:   Wed Aug 7 21:21:17 202

--- a/Pages/Appearance.xaml
+++ b/Pages/Appearance.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="copy_flyouts.Pages.Appearance"
+﻿<Page x:Class="CopyFlyouts.Pages.Appearance"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" 
-      xmlns:local="clr-namespace:copy_flyouts"
+      xmlns:local="clr-namespace:CopyFlyouts"
       mc:Ignorable="d" 
       d:DesignWidth="1200"
       Title="Appearance">
@@ -32,7 +32,7 @@
                     <!--<ui:TextBlock Text="" Appearance="Secondary" TextWrapping="WrapWithOverflow"/>-->
                 </StackPanel>
             </ui:CardControl.Header>
-            <ComboBox x:Name="ThemeComboBox" SelectedItem="{Binding Theme}"/>
+            <ComboBox x:Name="ThemeComboBox" SelectedItem="{Binding Appearance.Theme}"/>
         </ui:CardControl>
 
         <ui:CardControl Icon="{ui:SymbolIcon ArrowSwap24}" Grid.Row="2" Margin="0 0 0 40">
@@ -44,7 +44,7 @@
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
                 <ui:TextBlock Text="Off" Margin="0 0 13 0" x:Name="InvertedThemeLabel"/>
-                <ui:ToggleSwitch IsChecked="{Binding InvertedTheme}"/>
+                <ui:ToggleSwitch IsChecked="{Binding Appearance.InvertedTheme}"/>
             </StackPanel>
         </ui:CardControl>
         
@@ -56,8 +56,8 @@
                 </StackPanel>
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
-                <ui:TextBlock Margin="0 0 0 0" Text="{Binding FlyoutOpacity}" HorizontalAlignment="Center"/>
-                <Slider Value="{Binding FlyoutOpacity}" Margin="15 0 0 0" Maximum="1" Minimum="0.3" TickFrequency="0.05" IsSnapToTickEnabled="True" VerticalAlignment="Center"/>
+                <ui:TextBlock Margin="0 0 0 0" Text="{Binding Appearance.FlyoutOpacity}" HorizontalAlignment="Center"/>
+                <Slider Value="{Binding Appearance.FlyoutOpacity}" Margin="15 0 0 0" Maximum="1" Minimum="0.3" TickFrequency="0.05" IsSnapToTickEnabled="True" VerticalAlignment="Center"/>
             </StackPanel>
         </ui:CardControl>
 
@@ -69,8 +69,8 @@
                 </StackPanel>
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
-                <ui:TextBlock Margin="0 0 0 0" Text="{Binding FlyoutWidthScale}" HorizontalAlignment="Center"/>
-                <Slider Value="{Binding FlyoutWidthScale}" Margin="15 0 0 0" Maximum="3" Minimum="0.5" TickFrequency="0.10" IsSnapToTickEnabled="True" VerticalAlignment="Center"/>
+                <ui:TextBlock Margin="0 0 0 0" Text="{Binding Appearance.FlyoutWidthScale}" HorizontalAlignment="Center"/>
+                <Slider Value="{Binding Appearance.FlyoutWidthScale}" Margin="15 0 0 0" Maximum="3" Minimum="0.5" TickFrequency="0.10" IsSnapToTickEnabled="True" VerticalAlignment="Center"/>
             </StackPanel>
         </ui:CardControl>
 
@@ -82,8 +82,8 @@
                 </StackPanel>
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
-                <ui:TextBlock Margin="0 0 0 0" Text="{Binding FlyoutHeightScale}" HorizontalAlignment="Center"/>
-                <Slider Value="{Binding FlyoutHeightScale}" Margin="15 0 0 0" Maximum="3" Minimum="0.5" TickFrequency="0.10" IsSnapToTickEnabled="True" VerticalAlignment="Center"/>
+                <ui:TextBlock Margin="0 0 0 0" Text="{Binding Appearance.FlyoutHeightScale}" HorizontalAlignment="Center"/>
+                <Slider Value="{Binding Appearance.FlyoutHeightScale}" Margin="15 0 0 0" Maximum="3" Minimum="0.5" TickFrequency="0.10" IsSnapToTickEnabled="True" VerticalAlignment="Center"/>
             </StackPanel>
         </ui:CardControl>
 
@@ -95,8 +95,8 @@
                 </StackPanel>
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
-                <ui:TextBlock Margin="0 0 0 0" Text="{Binding FlyoutFontSizeScale}" HorizontalAlignment="Center"/>
-                <Slider Value="{Binding FlyoutFontSizeScale}" Margin="15 0 0 0" Maximum="3" Minimum="0.5" TickFrequency="0.10" IsSnapToTickEnabled="True" VerticalAlignment="Center"/>
+                <ui:TextBlock Margin="0 0 0 0" Text="{Binding Appearance.FlyoutFontSizeScale}" HorizontalAlignment="Center"/>
+                <Slider Value="{Binding Appearance.FlyoutFontSizeScale}" Margin="15 0 0 0" Maximum="3" Minimum="0.5" TickFrequency="0.10" IsSnapToTickEnabled="True" VerticalAlignment="Center"/>
             </StackPanel>
         </ui:CardControl>
 
@@ -108,8 +108,8 @@
                 </StackPanel>
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
-                <ui:TextBlock Margin="0 0 0 0" Text="{Binding FlyoutCorners}" HorizontalAlignment="Center"/>
-                <Slider Value="{Binding FlyoutCorners}" Margin="15 0 0 0" Maximum="20" Minimum="0" TickFrequency="1" IsSnapToTickEnabled="True" VerticalAlignment="Center"/>
+                <ui:TextBlock Margin="0 0 0 0" Text="{Binding Appearance.FlyoutCorners}" HorizontalAlignment="Center"/>
+                <Slider Value="{Binding Appearance.FlyoutCorners}" Margin="15 0 0 0" Maximum="20" Minimum="0" TickFrequency="1" IsSnapToTickEnabled="True" VerticalAlignment="Center"/>
             </StackPanel>
         </ui:CardControl>
 
