--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="copy_flyouts.App"
+﻿<Application x:Class="CopyFlyouts.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:copy_flyouts"
+             xmlns:local="clr-namespace:CopyFlyouts"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:tb="http://www.hardcodet.net/taskbar" 
              StartupUri="Windows/MainWindow.xaml">
