--- a/Pages/About.xaml
+++ b/Pages/About.xaml
@@ -1,16 +1,17 @@
-﻿<Page x:Class="copy_flyouts.Pages.About"
+﻿<Page x:Class="CopyFlyouts.Pages.About"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" 
-      xmlns:local="clr-namespace:copy_flyouts"
+      xmlns:local="clr-namespace:CopyFlyouts"
       mc:Ignorable="d" 
       d:DesignWidth="665"
       Title="General">
 
     <Grid Margin="30" VerticalAlignment="Top">
         <Grid.RowDefinitions>
+            <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
@@ -32,7 +33,7 @@
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
                 <ui:Button Content="Open update page" Margin="0,0,10,0" Appearance="Primary" IsEnabled="False" x:Name="OpenUpdatePageButton" Click="OpenUpdatePageButton_Click"/>
-                <ui:Button Content="Check for updates" Click="Button_Click"/>
+                <ui:Button Content="Check for updates" Click="CheckUpdatesButton_Click"/>
             </StackPanel>
         </ui:CardControl>
 
@@ -49,11 +50,11 @@
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
                 <ui:TextBlock Text="Off" Margin="0 0 13 0" x:Name="AutoUpdateLabel"/>
-                <ui:ToggleSwitch IsChecked="{Binding AutoUpdate}"/>
+                <ui:ToggleSwitch IsChecked="{Binding About.AutoUpdate}"/>
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon Timer24}" Grid.Row="3" Margin="0 0 0 10" IsEnabled="{Binding AutoUpdate}">
+        <ui:CardControl Icon="{ui:SymbolIcon Timer24}" Grid.Row="3" Margin="0 0 0 10" IsEnabled="{Binding About.AutoUpdate}">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Update check frequency" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -64,10 +65,10 @@
                     </ui:TextBlock>
                 </StackPanel>
             </ui:CardControl.Header>
-            <ComboBox x:Name="UpdateCheckFrequencyComboBox" SelectedItem="{Binding UpdateFrequency}"/>
+            <ComboBox x:Name="UpdateCheckFrequencyComboBox" SelectedItem="{Binding About.UpdateFrequency}"/>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon Link24}" Grid.Row="4" Margin="0 0 0 10">
+        <ui:CardControl Icon="{ui:SymbolIcon Link24}" Grid.Row="4" Margin="0 0 0 40">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Website" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -75,6 +76,8 @@
             </ui:CardControl.Header>
             <ui:HyperlinkButton Content="GitHub" NavigateUri="https://github.com/krznck/copy-flyouts"/>
         </ui:CardControl>
+
+        <ui:Button Grid.Row="5" Content="Reset update settings" Icon="{ui:SymbolIcon ArrowReset24}" x:Name="Reset" Click="Reset_Click" Margin="0 0 0 10"/>
 
     </Grid>
 </Page>
