--- a/Pages/General.xaml
+++ b/Pages/General.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="copy_flyouts.Pages.General"
+﻿<Page x:Class="CopyFlyouts.Pages.General"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" 
-      xmlns:local="clr-namespace:copy_flyouts"
+      xmlns:local="clr-namespace:CopyFlyouts"
       mc:Ignorable="d" 
       d:DesignWidth="1200"
       Title="General">
@@ -34,7 +34,7 @@
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
                 <ui:TextBlock Text="Off" Margin="0 0 13 0" x:Name="EnableCopyFlyoutsLabel"/>
-                <ui:ToggleSwitch IsChecked="{Binding FlyoutsEnabled}"/>
+                <ui:ToggleSwitch IsChecked="{Binding General.FlyoutsEnabled}"/>
             </StackPanel>
         </ui:CardControl>
 
@@ -55,7 +55,7 @@
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
                 <ui:TextBlock Text="Off" Margin="0 0 13 0" x:Name="RunOnStartupLabel"/>
-                <ui:ToggleSwitch IsChecked="{Binding RunOnStartup}"/>
+                <ui:ToggleSwitch IsChecked="{Binding General.RunOnStartup}"/>
             </StackPanel>
         </ui:CardControl>
 
@@ -72,7 +72,7 @@
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
                 <ui:TextBlock Text="Off" Margin="0 0 13 0" x:Name="StartMinimizedLabel"/>
-                <ui:ToggleSwitch IsChecked="{Binding StartMinimized}"/>
+                <ui:ToggleSwitch IsChecked="{Binding General.StartMinimized}"/>
             </StackPanel>
         </ui:CardControl>
 
@@ -89,11 +89,11 @@
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
                 <ui:TextBlock Text="Off" Margin="0 0 13 0" x:Name="MinimizeToTrayLabel"/>
-                <ui:ToggleSwitch IsChecked="{Binding MinimizeToTray}"/>
+                <ui:ToggleSwitch IsChecked="{Binding General.MinimizeToTray}"/>
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon Alert24}" Grid.Row="5" Margin="0 0 0 10" IsEnabled="{Binding MinimizeToTray}">
+        <ui:CardControl Icon="{ui:SymbolIcon Alert24}" Grid.Row="5" Margin="0 0 0 10" IsEnabled="{Binding General.MinimizeToTray}">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Notify when minimized to system tray" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -106,11 +106,11 @@
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
                 <ui:TextBlock Text="Off" Margin="0 0 13 0" x:Name="NotifyMinimizedLabel"/>
-                <ui:ToggleSwitch IsChecked="{Binding NotifyAboutMinimization}"/>
+                <ui:ToggleSwitch IsChecked="{Binding General.NotifyAboutMinimization}"/>
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon DismissSquare24}" Grid.Row="6" Margin="0 0 0 40" IsEnabled="{Binding MinimizeToTray}">
+        <ui:CardControl Icon="{ui:SymbolIcon DismissSquare24}" Grid.Row="6" Margin="0 0 0 40" IsEnabled="{Binding General.MinimizeToTray}">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Minimize on closure" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -123,27 +123,10 @@
             </ui:CardControl.Header>
             <StackPanel Orientation="Horizontal">
                 <ui:TextBlock Text="Off" Margin="0 0 13 0" x:Name="MinimizeOnClosureLabel"/>
-                <ui:ToggleSwitch IsChecked="{Binding MinimizeOnClosure}"/>
+                <ui:ToggleSwitch IsChecked="{Binding General.MinimizeOnClosure}"/>
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon ArrowSyncCircle24}" Grid.Row="7" Margin="0 0 0 40">
-            <ui:CardControl.Header>
-                <StackPanel>
-                    <ui:TextBlock Text="Check for updates automatically" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
-                    <ui:TextBlock Appearance="Secondary" TextWrapping="WrapWithOverflow">
-                        <Run Text="When"/>
-                        <Run Text="{StaticResource ProgramName}"/>
-                        <Run Text="is running, periodically checks for new updates."/>
-                    </ui:TextBlock>
-                </StackPanel>
-            </ui:CardControl.Header>
-            <StackPanel Orientation="Horizontal">
-                <ui:TextBlock Text="Off" Margin="0 0 13 0" x:Name="CheckForUpdatesLabel"/>
-                <ui:ToggleSwitch IsChecked="{Binding AutoUpdate}"/>
-            </StackPanel>
-        </ui:CardControl>
-
-        <ui:Button Grid.Row="8" Content="Reset general settings" Icon="{ui:SymbolIcon ArrowReset24}" x:Name="Reset" Click="Reset_Click"/>
+        <ui:Button Grid.Row="7" Content="Reset general settings" Icon="{ui:SymbolIcon ArrowReset24}" x:Name="Reset" Click="Reset_Click"/>
     </Grid>
 </Page>
