--- a/Resources/CommonResources.xaml
+++ b/Resources/CommonResources.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib" 
-                    xmlns:Resources="clr-namespace:copy_flyouts.Resources">
+                    xmlns:Resources="clr-namespace:CopyFlyouts.Resources">
 
     <sys:String x:Key="ProgramName">CopyFlyouts</sys:String>
     <sys:String x:Key="AuthorName">krznck</sys:String>
